z-index has solved

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@
     width: 100%;
     text-align: center;
     font-family: "vazir";
-    z-index: -1;
+    z-index:1000;
 }
 
 
@@ -77,6 +77,7 @@ header .progress .progress-bar{
     display: flex;
     align-items: center;
     text-align: center;
+    z-index: 1001;
   }
   
   .dot:nth-of-type(1) {
@@ -137,6 +138,7 @@ header .progress .progress-bar{
    top: 203px;
    left: 198px;
    transform:translate(5.5px) ;
+ z-index: 1002;
  
 }
 
@@ -152,6 +154,7 @@ header .progress .progress-bar{
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   transform-origin:center;
+  z-index: 1002;
 }
 
 .hour{
@@ -167,7 +170,7 @@ header .progress .progress-bar{
   -o-transform: rotate(45deg);
   transform-origin: bottom;
   background: #eed70a;
-  z-index: -1;
+  z-index: 1001;
 }
 .minute{
   position: absolute;
@@ -177,7 +180,7 @@ header .progress .progress-bar{
   left: 35px;
   transform-origin: bottom;
   background: #e5255e;
-  z-index: -1;
+  z-index: 1001;
 }
 
 
@@ -194,7 +197,7 @@ header .progress .progress-bar{
   -ms-transform: rotate(90deg);
   -o-transform: rotate(90deg);
   transform-origin: bottom;
-  z-index: -1;
+  z-index: 1001;
 }
 
 
@@ -204,4 +207,13 @@ section{
   margin-right: 50px;
   margin-left: 50px;
   justify-content: center;
+}
+
+section h3{
+margin-bottom: 10px;
+margin-top: 30px;
+}
+
+section p{
+  line-height: 35px;
 }
